# kifrs-rag

./: .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  OBJECTIVE.md  README.md  ROADMAP.md  pyproject.toml
changesets/: CHANGESET_TEMPLATE.md  README.md
docs/: ARCHITECTURE.md  BACKLOG.md  OBJECTIVE.md  PRD.md  imagegen-manifest.md  roadmap-gap-2026-07-03-final.md  roadmap-gap-2026-07-03-rga1.md  roadmap-gap-2026-07-03-ro1.md  roadmap-gap-2026-07-03-wa1.md  roadmap-gap-2026-07-03.md  roadmap-gap-2026-07-04-firm-map.md  roadmap-gap-2026-07-04-fm2.md  roadmap-gap-2026-07-04-fm3.md  roadmap-gap-2026-07-04-pm1.md  roadmap-gap-2026-07-04-pm3.md  roadmap-gap-2026-07-04-rp2.md  roadmap-gap-2026-07-12-automation.md  roadmap-gap-2026-07-12-drift.md  roadmap-gap-2026-07-12-viz.md  roadmap-gap-2026-07-12.md
kifrs/: authority.py  download.py  drift.py  embed.py  mcp_server.py  parse.py  store.py  user_notes.py
phases/: index.json
scripts/: __init__.py  accounting_intelligence_decision_queue.py  accounting_intelligence_gap_audit.py  accounting_intelligence_next_action.py  accounting_intelligence_next_action_sequence_gate.py  accounting_intelligence_progress_map.py  audit_user_notes.py  authority_connector_recommendation_check.py  authority_index_smoke.py  authority_ingestion_feasibility_check.py  authority_source_taxonomy_check.py  authority_storage_boundary_check.py  build_cross_references.py  check_web_data_safety.py  client_private_close_gate.py  client_private_contract_check.py  client_private_deletion_attestation_check.py  client_private_evidence_adapter_report.py  (+196 more)
(+1015 files in other folders)
