[project]
name = "kifrs-rag"
version = "0.1.0"
description = "K-IFRS retrieval and MCP server prototype with protected source data excluded"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "fastmcp>=0.2.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
embed = [
    "sentence-transformers>=3.0.0",
]
eval = [
    "pytest>=8.0",
    "anthropic>=0.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kifrs"]
